--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -1214,7 +1214,11 @@ Obvious ones:
 #+begin_src emacs-lisp
 (when (eq system-type 'darwin)
   ;; use command as control
-  (gsetq mac-command-modifier 'control))
+  (gsetq mac-command-modifier 'control)
+  ;; fix home and end
+  (general-def
+    "<home>" #'evil-beginning-of-visual-line
+    "<end>" #'evil-end-of-visual-line))
 #+end_src
 
 ** Recentf
