Emacs whitespace-mode - Higlight chars after fill-column
(instead of whitespace-line-column)

--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -2735,7 +2735,9 @@ Soft wrap lines at =fill-column=.
   :diminish global-whitespace-mode
   :config
   (gsetq whitespace-style
-         (list 'face 'trailing 'space-before-tab::tab 'tabs))
+         (list 'face 'trailing 'space-before-tab::tab 'tabs)
+         ;; use `fill-column' value
+         whitespace-line-column nil)
   (defun noct:add-lines-tail ()
     "Add lines-tail to `whitespace-style' and refresh `whitespace-mode'."
     (setq-local whitespace-style (cons 'lines-tail whitespace-style))
